@@ -322,6 +322,7 @@ Wed Jan 13 10:59:20 CST 2016
 
 
 Thu Jan 14 14:14:17 CST 2016
+- [+] include/sandix/slab.h			[D] kmalloc kfree (empty)
 - [+] include/sandix/err.h			[D] IS_ERR things
 - [+] scripts/Lindent
 - [M] arch/x86/include/asm/spinlock.h		[D] basic spinlock finished
